feat:项目初始化等待
新增项目初始化等待后台服务启动
人脸比对评分70->80